Small fix so that the variable names in the tippy bubble will better align with the text of their value

--- a/codeboot.bundle.css
+++ b/codeboot.bundle.css
@@ -991,7 +991,7 @@ body {
 
 .tippy-box[data-theme="cb-exec-point-bubble"] .cb-exec-point-bubble-binding .cb-code-font {
     font-weight: bold;
-    font-size: 110%;
+    font-size: 111%;
 }
 
 /*-------------------------------------------------------------------*/
